# CNPQ

./: .gitignore  Pipfile  Readme.md  captcha.py  client.py  client_scraper.py  logging_config.ini  pages.py  pyproject.toml  requirements.txt  setup.py
examples/: better_downloader.py  simple_downloader.py  simple_scraper.py
lattes/: captcha.py  config.py  logging_config.ini  pages.py  search.py  search_data.py
test/: conftest.py  test_pages.py
