[tool.poetry]
name = "cnpq"
version = "0.1.0"
description = "captcha negated by python requests"
authors = ["Josefson Fraga <josefson@users.noreply.github.com>"]
license = "MIT"
packages =[
    { include = "lattes" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.8"
pillow = "^6.1"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
ipython = "^7.7"
jedi = "^0.14.1"
autopep8 = "^1.4"
flake8 = "^3.7"
ipdb = "^0.12.2"
ptipython = "^1.0"
pylint = "^2.3"
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
