[tool.poetry]
name = "cnpq"
version = "0.1.0"
description = ""
authors = ["Josefson Fraga <josefson.br@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.1"
Pillow = "^8.2.0"
fake-useragent = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
jedi = "^0.18.0"
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
